--- a/source/index.html
+++ b/source/index.html
@@ -91,6 +91,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .about.desktop .logo-message { display: block; top: -20px; font-size: 12px; }
 .about.desktop .logo-github { display: block; top: 130px; width: 24px; height: 24px; }
 .titlebar { color: #aaaaaa; display: none; height: 32px; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 2; -webkit-app-region: drag; }
+.titlebar-visible { display: block; }
 .titlebar-content { display: block; padding: 0 142px; height: 100%; text-align: center; font-size: 14px; line-height: 32px; transition: all .1s ease-in-out; user-select: none; }
 .titlebar-content-text { display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 .spinner .titlebar-content { opacity: 0; }
