--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .welcome.spinner .menu-button { display: none; }
 .about { overflow: hidden; }
 .about .toolbar { display: none; }
-.about .logo { display: block; top: -150px; background-color: #ececec; color: #666666; }
+.about .logo { display: block; background-color: #ececec; color: #666666; }
 .about .logo-message { display: block; top: 132px; font-size: 14px; }
 .about .logo-github { display: block; top: 340px; width: 48px; height: 48px; }
 .about a { text-decoration: none; color: #666666; }
