--- a/source/index.html
+++ b/source/index.html
@@ -269,6 +269,10 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
     .sidebar-view-find li:not(:first-child) { border-top: 1px solid #2a2a2a; }
     .sidebar-view-find li:hover { background: #383838; }
 }
+@media screen and (prefers-reduced-motion: reduce) {
+.menu { transition: none; }
+.sidebar { transition: none; }
+}
 </style>
 </head>
 <body class="welcome spinner">
