--- a/source/index.html
+++ b/source/index.html
@@ -177,27 +177,24 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
 .sidebar-closebutton { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color: #777777; opacity: 1.0; display: block; transition: 0.2s; position: absolute; top: 0; right: 15px; margin-left: 50px; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
 .sidebar-closebutton:hover { color: #242424; }
 .sidebar-content { padding-left: 20px; padding-right: 20px; margin-bottom: 20px; overflow-y: auto; height: calc(100vh - 60px); }
-.sidebar-view-title { font-weight: bold; font-size: 11px; line-height: 1.25; border-bottom: 1px solid #ececec; padding-bottom: 0.3em; margin-top: 0; margin-bottom: 16px; color: #333; user-select: none; -webkit-user-select: none; -moz-user-select: none; cursor: default; }
-.sidebar-view-title-button { display: inline-block; color: #888; text-align: center; vertical-align: middle; font-weight: bold; width: 12px; height: 12px; font-size: 10px; line-height: 12px; border-radius: 50%; transform: translateY(-1px); padding: 1px; background: transparent; border: 1px solid #aaa; text-decoration: none; cursor: pointer; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
-.sidebar-view-title-button:hover { color: #333; border: 1px solid #333; }
-.sidebar-view-header { font-weight: bold; font-size: 11px; text-transform: uppercase; line-height: 1.25; margin-top: 16px; margin-bottom: 16px; border-bottom: 1px solid #ececec; display: block; user-select: none; -webkit-user-select: none; -moz-user-select: none; cursor: default; }
-.sidebar-view-item { margin-bottom: 0px; display: block; }
-.sidebar-view-item-name { float: left; font-size: 11px; min-width: 95px; max-width: 95px; padding-right: 5px; padding-top: 7px; display: block; }
-.sidebar-view-item-name input { color: #777; font-family: inherit; font-size: inherit; color: inherit; background-color: inherit; width: 100%; text-align: right; margin: 0; padding: 0; border: 0; outline: none; text-overflow: ellipsis; }
-.sidebar-view-item-value-list { margin: 0; margin-left: 105px; overflow: hidden; display: block; padding: 0; }
-.sidebar-view-item-value { font-size: 11px; background-color: #fcfcfc; border-radius: 2px; border: 1px solid #fcfcfc; margin-top: 3px; margin-bottom: 3px; overflow: auto; }
-.sidebar-view-item-value-dark { background-color: #f8f8f8; border: 1px solid #f8f8f8; }
-.sidebar-view-item-value b { font-weight: bold; }
-.sidebar-view-item-value code { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; overflow: auto; white-space: pre-wrap; word-wrap: break-word; }
-.sidebar-view-item-value pre { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; margin: 0; overflow: auto; white-space: pre; word-wrap: normal; display: block; }
-.sidebar-view-item-value-line { padding: 4px 6px 4px 6px; }
-.sidebar-view-item-value-line-link { padding: 4px 6px 4px 6px; cursor: default; }
-.sidebar-view-item-value-line-link:hover { text-decoration: underline; }
-.sidebar-view-item-value-line-border { padding: 4px 6px 4px 6px; border-top: 1px solid rgba(27, 31, 35, 0.05); }
-.sidebar-view-item-value-line-content { white-space: pre; word-wrap: normal; overflow: auto; display: block; }
-.sidebar-view-item-value-expander { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; float: right; color: #aaa; cursor: pointer; user-select: none; -webkit-user-select: none; -moz-user-select: none; padding: 4px 6px 4px 6px; }
-.sidebar-view-item-value-expander:hover { color: #000; }
-.sidebar-view-item-select {
+.sidebar-header { font-weight: bold; font-size: 11px; text-transform: uppercase; line-height: 1.25; margin-top: 16px; margin-bottom: 16px; border-bottom: 1px solid #ececec; display: block; user-select: none; -webkit-user-select: none; -moz-user-select: none; cursor: default; }
+.sidebar-item { margin-bottom: 0px; display: block; }
+.sidebar-item-name { float: left; font-size: 11px; min-width: 95px; max-width: 95px; padding-right: 5px; padding-top: 7px; display: block; }
+.sidebar-item-name input { color: #777; font-family: inherit; font-size: inherit; color: inherit; background-color: inherit; width: 100%; text-align: right; margin: 0; padding: 0; border: 0; outline: none; text-overflow: ellipsis; }
+.sidebar-item-value-list { margin: 0; margin-left: 105px; overflow: hidden; display: block; padding: 0; }
+.sidebar-item-value { font-size: 11px; background-color: #fcfcfc; border-radius: 2px; border: 1px solid #fcfcfc; margin-top: 3px; margin-bottom: 3px; overflow: auto; }
+.sidebar-item-value-dark { background-color: #f8f8f8; border: 1px solid #f8f8f8; }
+.sidebar-item-value b { font-weight: bold; }
+.sidebar-item-value code { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; overflow: auto; white-space: pre-wrap; word-wrap: break-word; }
+.sidebar-item-value pre { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; margin: 0; overflow: auto; white-space: pre; word-wrap: normal; display: block; }
+.sidebar-item-value-line { padding: 4px 6px 4px 6px; }
+.sidebar-item-value-line-link { padding: 4px 6px 4px 6px; cursor: default; }
+.sidebar-item-value-line-link:hover { text-decoration: underline; }
+.sidebar-item-value-line-border { padding: 4px 6px 4px 6px; border-top: 1px solid rgba(27, 31, 35, 0.05); }
+.sidebar-item-value-line-content { white-space: pre; word-wrap: normal; overflow: auto; display: block; }
+.sidebar-item-value-expander { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; float: right; color: #aaa; cursor: pointer; user-select: none; -webkit-user-select: none; -moz-user-select: none; padding: 4px 6px 4px 6px; }
+.sidebar-item-value-expander:hover { color: #000; }
+.sidebar-item-select {
     font-family: inherit; font-size: 12px;
     background-color: #fcfcfc; border: #fcfcfc; color: #333;
     border-radius: 2px; width: 100%; height: 23px; padding: 3px 12px 3px 7px;
@@ -209,49 +206,46 @@ button { font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI"
     background-size: 5px 5px, 5px 5px;
     background-repeat: no-repeat;
 }
-.sidebar-view-separator { margin-bottom: 20px; }
-.sidebar-view-find input[type=text] { font-family: inherit; font-size: 13px; padding: 4px 6px 4px 6px; background: #fff; border-radius: 4px; border: 1px solid #ccc; outline: 0; }
-.sidebar-view-find ol { list-style-type: none; overflow-y: auto; margin: 8px 0 20px 0; padding: 0; }
-.sidebar-view-find li { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; margin: 0; padding: 5px 8px 5px 8px; outline: 0; white-space: nowrap; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
-.sidebar-view-find li:not(:first-child) { border-top: 1px solid #f0f0f0; }
-.sidebar-view-find li:hover { background: #eee; }
-.sidebar-view-documentation { font-size: 13px; line-height: 1.5; margin: 0; }
-.sidebar-view-documentation h1 { font-weight: bold; font-size: 13px; line-height: 1.25; border-bottom: 1px solid #e8e8e8; padding-bottom: 0.3em; margin-top: 0; margin-bottom: 16px; }
-.sidebar-view-documentation h2 { font-weight: bold; font-size: 11px; line-height: 1.25; margin-top: 20px; margin-bottom: 16px; text-transform: uppercase; border: 0; }
-.sidebar-view-documentation h3 { font-weight: bold; font-size: 11px; line-height: 1.25; }
-.sidebar-view-documentation p { margin-top: 4px; margin-bottom: 4px; margin-left: 0px; }
-.sidebar-view-documentation a { color: #237; }
-.sidebar-view-documentation code { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; background-color: rgba(27, 31, 35, 0.05); padding: 0.2em 0.4em; margin: 0; border-radius: 3px; }
-.sidebar-view-documentation pre { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; padding: 16px; overflow: auto; line-height: 1.45; background-color: rgba(27, 31, 35, 0.05); border-radius: 3px; }
-.sidebar-view-documentation pre code { font-size: 13px; padding: 16px; line-height: 1.45; background-color: transparent; padding: 0; border-radius: 0; }
-.sidebar-view-documentation tt { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-weight: bold; font-size: 90%; background-color: rgba(27, 31, 35, 0.05); border-radius: 3px; padding: 0.2em 0.4em; margin: 0; }
-.sidebar-view-documentation dl dt { font-size: 13px; font-weight: bold; padding: 0; margin-top: 16px; margin-left: 0px; }
-.sidebar-view-documentation dd { padding: 0 16px; margin-left: 0; margin-bottom: 16px; }
-.sidebar-view-documentation ul { margin-top: 6px; margin-bottom: 6px; padding-left: 20px; }
-.sidebar-view-documentation blockquote { margin-left: 15px; margin-right: 15px; }
+.sidebar-separator { margin-bottom: 20px; }
+.sidebar-find input[type=text] { font-family: inherit; font-size: 13px; padding: 4px 6px 4px 6px; background: #fff; border-radius: 4px; border: 1px solid #ccc; outline: 0; }
+.sidebar-find ol { list-style-type: none; overflow-y: auto; margin: 8px 0 20px 0; padding: 0; }
+.sidebar-find li { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; margin: 0; padding: 5px 8px 5px 8px; outline: 0; white-space: nowrap; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
+.sidebar-find li:not(:first-child) { border-top: 1px solid #f0f0f0; }
+.sidebar-find li:hover { background: #eee; }
+.sidebar-documentation { font-size: 13px; line-height: 1.5; margin: 0; }
+.sidebar-documentation h1 { font-weight: bold; font-size: 13px; line-height: 1.25; border-bottom: 1px solid #e8e8e8; padding-bottom: 0.3em; margin-top: 0; margin-bottom: 16px; }
+.sidebar-documentation h2 { font-weight: bold; font-size: 11px; line-height: 1.25; margin-top: 20px; margin-bottom: 16px; text-transform: uppercase; border: 0; }
+.sidebar-documentation h3 { font-weight: bold; font-size: 11px; line-height: 1.25; }
+.sidebar-documentation p { margin-top: 4px; margin-bottom: 4px; margin-left: 0px; }
+.sidebar-documentation a { color: #237; }
+.sidebar-documentation code { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; background-color: rgba(27, 31, 35, 0.05); padding: 0.2em 0.4em; margin: 0; border-radius: 3px; }
+.sidebar-documentation pre { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-size: 12px; padding: 16px; overflow: auto; line-height: 1.45; background-color: rgba(27, 31, 35, 0.05); border-radius: 3px; }
+.sidebar-documentation pre code { font-size: 13px; padding: 16px; line-height: 1.45; background-color: transparent; padding: 0; border-radius: 0; }
+.sidebar-documentation tt { font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier, monospace; font-weight: bold; font-size: 90%; background-color: rgba(27, 31, 35, 0.05); border-radius: 3px; padding: 0.2em 0.4em; margin: 0; }
+.sidebar-documentation dl dt { font-size: 13px; font-weight: bold; padding: 0; margin-top: 16px; margin-left: 0px; }
+.sidebar-documentation dd { padding: 0 16px; margin-left: 0; margin-bottom: 16px; }
+.sidebar-documentation ul { margin-top: 6px; margin-bottom: 6px; padding-left: 20px; }
+.sidebar-documentation blockquote { margin-left: 15px; margin-right: 15px; }
 @media (prefers-color-scheme: dark) {
     .sidebar html { color: #dfdfdf; }
     .sidebar { background-color: #2d2d2d; color: #dfdfdf; border-left: 1px solid rgba(0, 0, 0, 0); }
     .sidebar-closebutton { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color: #777777; opacity: 1.0; display: block; transition: 0.2s; position: absolute; top: 0; right: 15px; margin-left: 50px; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
     .sidebar-closebutton:hover { color: #ffffff; }
-    .sidebar-view-item-value { background-color: #383838; border-color: #383838; }
-    .sidebar-view-item-value-dark { background-color: #3e3e3e; border-color: #3e3e3e; }
-    .sidebar-view-item-value-line-border { border-color: rgba(0, 0, 0, 0.09); }
-    .sidebar-view-item-select { background-color: #383838; border: #383838; color: #dfdfdf; background-image: linear-gradient(45deg, transparent 50%, #aaa 50%), linear-gradient(135deg, #aaa 50%, transparent 50%); }
-    .sidebar-view-title { border-bottom-color: #2d2d2d; color: #dfdfdf; }
-    .sidebar-view-title-button { color: #888888; border-color: #888888; }
-    .sidebar-view-title-button:hover { color: #dfdfdf; border-color: #dfdfdf; }
-    .sidebar-view-header { border-bottom-color: #2d2d2d; color: #dfdfdf; }
-    .sidebar-view-documentation h1 { border-bottom: 1px solid #424242; color: #dfdfdf; }
-    .sidebar-view-documentation h2 { color: #dfdfdf; }
-    .sidebar-view-documentation p { color: #aaaaaa; }
-    .sidebar-view-documentation a { color: #6688aa; }
-    .sidebar-view-documentation tt { background-color:#1e1e1e; }
-    .sidebar-view-documentation code { background-color: #1e1e1e; }
-    .sidebar-view-documentation pre { background-color: #1e1e1e; }
-    .sidebar-view-find input[type=text] { background: #383838; color: #dfdfdf; border-color: #424242; }
-    .sidebar-view-find li:not(:first-child) { border-top: 1px solid #2a2a2a; }
-    .sidebar-view-find li:hover { background: #383838; }
+    .sidebar-item-value { background-color: #383838; border-color: #383838; }
+    .sidebar-item-value-dark { background-color: #3e3e3e; border-color: #3e3e3e; }
+    .sidebar-item-value-line-border { border-color: rgba(0, 0, 0, 0.09); }
+    .sidebar-item-select { background-color: #383838; border: #383838; color: #dfdfdf; background-image: linear-gradient(45deg, transparent 50%, #aaa 50%), linear-gradient(135deg, #aaa 50%, transparent 50%); }
+    .sidebar-header { border-bottom-color: #2d2d2d; color: #dfdfdf; }
+    .sidebar-documentation h1 { border-bottom: 1px solid #424242; color: #dfdfdf; }
+    .sidebar-documentation h2 { color: #dfdfdf; }
+    .sidebar-documentation p { color: #aaaaaa; }
+    .sidebar-documentation a { color: #6688aa; }
+    .sidebar-documentation tt { background-color:#1e1e1e; }
+    .sidebar-documentation code { background-color: #1e1e1e; }
+    .sidebar-documentation pre { background-color: #1e1e1e; }
+    .sidebar-find input[type=text] { background: #383838; color: #dfdfdf; border-color: #424242; }
+    .sidebar-find li:not(:first-child) { border-top: 1px solid #2a2a2a; }
+    .sidebar-find li:hover { background: #383838; }
 }
 @media screen and (prefers-reduced-motion: reduce) {
 .menu { transition: none; }
