--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+<meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 <meta name="version" content="0.0.0">
 <meta name="date" content="">
 <title>Netron</title>
